--- a/bleedingbox.dev/index.html
+++ b/bleedingbox.dev/index.html
@@ -41,7 +41,7 @@
 		</ul>
 		<h2>Contacts</h2>
 		<ul>
-			<li>Discord: fluvoxa</li>
+			<li>Discord: fluvoxademia</li>
 			<li><a href="https://transfem.social/@blink">transfem.social</a></li>
 			<li><a href="https://discord.bleedingbox.dev/">Our community!</a></li>
 		</ul>
