--- a/blogs.bleedingbox.dev/blogs/help-needed.html
+++ b/blogs.bleedingbox.dev/blogs/help-needed.html
@@ -24,13 +24,10 @@
 	<p id="content">
 		CardinalMoss, my canadian friend, got kicked out from her household 4 years ago, she went to live in her father's house who turned out to be abusive, then she left her father's house 4 months ago and moved to a friend's house to live there, until now, May 5th 2024, she had to be kicked out due to Homeowners Association bringing up park inspectors, Moss had to be kicked out of her friends house since she can't live in a shed according to HOA. She has tried going into shelters with no results, we (me and friends) are donating her daily money so she can survive this.
 	</p>
-	<h3 id="logo">
-		Updates
-	</h3>
+	<h2 id="logo">
+		Donate
+	</h2>
 	<p id="content">
-		May 10th 2024, to be updated!
-	</p>
-	<p>
 		<a href="https://paypal.me/blinkodemia">Paypal</a>
 		All donations will be anonymous, please mention how much you want to donate to the project and how much you want to donate to my friend, example: "I want 25% go to BleedingBOX and 75% of it going to CardinalMoss.", a proof-of-donation will be sent to your email if you provide one in the donation.
 	</p>
