--- a/blogs.bleedingbox.dev/blogs/help-needed.html
+++ b/blogs.bleedingbox.dev/blogs/help-needed.html
@@ -29,7 +29,7 @@
 	</h2>
 	<p id="content">
 		<a href="https://paypal.me/blinkodemia">Paypal</a>
-		All donations will be anonymous, please mention how much you want to donate to the project and how much you want to donate to my friend, example: "I want 25% go to BleedingBOX and 75% of it going to CardinalMoss.", a proof-of-donation will be sent to your email if you provide one in the donation.
+		All donations will be anonymous, please mention how much you want to donate to the project and how much you want to donate to my friend, a proof-of-donation will be sent to your email if you provide one in the donation.
 	</p>
 </body>
 
