--- a/sucks.bleedingbox.dev/index.html
+++ b/sucks.bleedingbox.dev/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta content="sucks." property="og:title" />
-	<meta content="things that suck" property="og:description" />
+	<meta content="things that absolutely suck" property="og:description" />
 	<meta content="https://sucks.bleedingbox.dev/" property="og:url" />
 	<meta content="#C10023" data-react-helmet="true" name="theme-color" />
 	<link rel="preload" href="normalize.css" as="style" />
@@ -22,10 +22,9 @@
 	</h1>
 
 	<div id="content">
-		<h3>
-			Here I will list things that I personally believe that suck, I'll try to bring sources whenever
-			needed.
-		</h3>
+		<h2>
+			I recommend the linux people to call it “GNU / Linux” instead of “GNU/Linux”. never hurts to distance yourself from GNU. — mjl on #plan9-social
+		</h2>
 		<ul>
 			<li>
 				glibc (<a href="https://www.etalabs.net/compare_libcs.html">bloated</a> <a
@@ -35,18 +34,18 @@
 				systemd, bloated "init" (for Desktops, for Servers it's somewhat fine.), it has a huge attack surface, many tools that are useless to the average Desktop user. [Alternative: <a href="https://davmac.org/projects/dinit/">dinit</a> / <a href="https://github.com/OpenRC/openrc">OpenRC</a>]
 			</li>
 			<li>
-				Any Ubuntu/Debian-based distro, their packaging system involves keeping a decade old packages for the sake of "stability".
+				Any Ubuntu/Debian-based distro, their packaging system involves keeping a decade old packages for the sake of "stability". [Alternative: Any other non-LTS distro.]
 			</li>
 			<li>
 				AI-Generated "art", it's simply not art, never will be.
 			</li>
 			<li>
-				Arch Linux, opposite of freedom, non-minimalistic, glibc-only as well systemd-only, aren't we supposed to have software freedom? [Alternative: <a href="https://gentoo.org/">Gentoo</a> / <a href="https://voidlinux.org/">Void Linux</a>]
+				Arch Linux, opposite of freedom, non-minimalistic, glibc-only as well systemd-only, aren't we supposed to have software freedom? [Alternative: <a href="https://gentoo.org/">Gentoo Linux</a> / <a href="https://voidlinux.org/">Void Linux</a> / <a href="https://chimera-linux.org/">Chimera Linux</a> / <a href="https://alpinelinux.org/">Alpine Linux</a> / <a href="https://en.wikipedia.org/wiki/Berkeley_Software_Distribution">BSD</a>]
 			</li>
 			<li>
-				GNU Automake, complicates the process of setting up projects rather than simplifying [Alternative: <a href="https://www.crufty.net/help/sjg/bmake.html">bmake</a>]
+				GNU Automake, complicates the process of setting up projects rather than simplifying them. [Alternative: <a href="https://www.crufty.net/help/sjg/bmake.html">bmake</a>]
+			</li>
 		</ul>
-		<script src="./oneko.js"></script>
 	</div>
 </body>
 
