Add license EVERYWHERE

--- a/blogs.bleedingbox.dev/index.html
+++ b/blogs.bleedingbox.dev/index.html
@@ -40,7 +40,11 @@
 				</a>
 			</li>
 		</ul>
-		<script src="./oneko.js"></script>
+	</div>
+	<div>
+		<footer>
+			Licensed under BSD 3-Clause. <a href="LICENSE">LICENSE</a>
+		</footer>
 	</div>
 </body>
 
