--- a/sucks.bleedingbox.dev/index.html
+++ b/sucks.bleedingbox.dev/index.html
@@ -21,7 +21,7 @@
 		sucks(1)
 	</h1>
 
-	<div id="content">
+	<div>
 		<h2>
 			I recommend the linux people to call it “GNU / Linux” instead of “GNU/Linux”. never hurts to distance yourself from GNU. — mjl on #plan9-social
 		</h2>
@@ -46,6 +46,11 @@
 				GNU Automake, complicates the process of setting up projects rather than simplifying them. [Alternative: <a href="https://www.crufty.net/help/sjg/bmake.html">bmake</a>]
 			</li>
 		</ul>
+	</div>
+	<div>
+		<footer>
+			Licensed under BSD 3-Clause. <a href="LICENSE">LICENSE</a>
+		</footer>
 	</div>
 </body>
 
