--- a/home.bleedingbox.dev/index.html
+++ b/home.bleedingbox.dev/index.html
@@ -19,14 +19,14 @@
 	<h1 id="logo">
 		home(1)
 	</h1>
-	<nav style="text-align: center;">
+	<nav id="bar" style="text-align: center;">
 		<a id="logo" href="https://blogs.bleedingbox.dev">blogs</a> /
 		<a id="logo" href="https://sucks.bleedingbox.dev">sucks</a>
 	</nav>
 	<h1 id="logo">about me</h1>
 	<div style="text-align: center;">
-		<p>
-			Transfeminine Web Developer, tech enthusiast circa 2010, UNIX enjoyer, loves BSD and non-GNU/Linux distributions, also loves cars.
+		<p id="bar" >
+			Transfeminine tech enthusiast, UNIX Experimentalist, Web Developer, BSD Enjoyer, GNU Hater, musl libc shill, privacy advocate. Daily drives Chimera Linux
 		</p>
 		<h3 style="text-align: center;">Projects & Instances</h3>
 		<div style="text-align: center;">
@@ -34,7 +34,15 @@
 			<a href="https://git.bleedingbox.dev/">Forgejo</a>
 			<a href="https://piped.bleedingbox.dev">Piped</a>
 		</div>
+		<h3 style="text-align: center;">Contacts & Community</h3>
+		<div style="text-align: center;">
+			<p>Discord: @nginx_mainline</p>
+			<a href="https://discord.bleedingbox.dev/">Discord</a>
+			<p>Email: blink@bleedingbox.dev</p>
+		</div>
 	</div>
+	<h2 id="logo">Happy Pride Month!</h2> 
+	<div id="pride"></div>
 	<div>
 		<footer>
 			Licensed under BSD 3-Clause. <a href="LICENSE">LICENSE</a>
