--- a/home.bleedingbox.dev/index.html
+++ b/home.bleedingbox.dev/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<h3 style="text-align: center;">Contacts & Community</h3>
 		<div style="text-align: center;">
-			<p>Discord: @nginx_mainline</p>
+			<p>Discord: @blinkodemia</p>
 			<a href="https://discord.bleedingbox.dev/">Discord</a>
 			<p>Email: blink@bleedingbox.dev</p>
 		</div>
