--- a/blogs.bleedingbox.dev/index.html
+++ b/blogs.bleedingbox.dev/index.html
@@ -39,6 +39,9 @@
 					2024-05-06 > EMERGENCY, HELP A HOMELESS FRIEND.
 				</a>
 			</li>
+			<li>
+				<a href="blogs/moving-from-cloudflare.html">2024-06-10 > Moving from Cloudflare</a>
+			</li>
 		</ul>
 	</div>
 	<div>
