--- a/home.bleedingbox.dev/index.html
+++ b/home.bleedingbox.dev/index.html
@@ -34,6 +34,10 @@
 			<a href="https://git.bleedingbox.dev/">Forgejo</a>
 			<a href="https://piped.bleedingbox.dev">Piped</a>
 		</div>
+		<h3 style="text-align: center;">Mirrors</h3>
+		<div style="text-align: center;">
+				<a href="https://mirrors.bleedingbox.dev/pub/OpenBSD">OpenBSD</a>
+				<a href="https://mirrors.bleedingbox.dev/pub/archlinux">Arch Linux</a>
 		<h3 style="text-align: center;">Contacts & Community</h3>
 		<div style="text-align: center;">
 			<p>Discord: @blinkodemia</p>
